updating new interface

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <table class="table text-center">
                 <tbody>
                     <tr>
-                        <td style="border-top: none;"><img src="image/user.png" height='50%' alt='user photo'> : O</td>
-                        <td  style="border-top: none;"><img src="image/roboto.png" height='50%' alt='robot photo'>: X</td>
+                        <td style="border-top: none;"><img src="image/user.png" height='50%' alt='user photo'>  O</td>
+                        <td  style="border-top: none;"><img src="image/roboto.png" height='50%' alt='robot photo'> X</td>
                     </tr>
                 </tbody>
             </table>
@@ -632,7 +632,7 @@
             // Set all the input to __
             var x = document.getElementsByClassName("block");
             for(var i = 0; i < x.length; ++i) {
-                x[i].innerHTML = " -- ";
+                x[i].innerHTML = " &nbsp;&nbsp; ";
             }
         }
 
