--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         table {
-            font-size: 50px;
+            font-size: 430%;
             border-color: white;
             font-weight: bolder;
         }
@@ -47,6 +47,7 @@
     </style>
     <body onload="StartGame()">
         <div class="container fill" style="margin-left:10%;margin-right:10%;">
+        <br>
             <table class="table text-center">
                 <tbody>
                     <tr scope="row">
