--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         }
 
         table {
-            font-size: 430%;
+            /*font-size: 322%;*/
+            font-size: 50px;
             border-color: white;
             font-weight: bolder;
         }
