--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         }
 
         table {
-            /*font-size: 322%;*/
-            font-size: 50px;
+            font-size: 290%;
+            /*font-size: 50px;*/
             border-color: white;
             font-weight: bolder;
         }
