updating for checking changes

--- a/test_page/index.html
+++ b/test_page/index.html
@@ -17,30 +17,60 @@
                 <div id="slide-1-heading" class="text-xs-center">
                     <h1 class="display-3"> Work at Cozee</h1>
                 </div>
-                <div id="slide-1-msg" class="text-xs-center">
-                    <h5>We're looking for talented people who care about solving hard problems and building technology that people love to use</h5>
+
+                <div class="row">
+
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-3">
+
                 </div>
+
+                    <div class="text-xs-center col-xs-8 col-sm-8 col-md-8 col-lg-6" id="slide-1-msg">
+                    <h5>We're looking for talented people who care about solving hard problems and building technology that people love to use</h5>
+                    </div>
+
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-3">
+
+                </div>
+
+
+                </div>
+
                 <div id="slide-1-button" class="text-xs-center">
                     <a class="btn btn-secondary slide-1-button" href="#" role="button">Current opening postions</a>
                 </div>
                 <br><br><br><br>
             </div>
+
+
+
             <!-- mission slide -->
         <div class="container">
             <div id="slide-2">
             </div>
+
+
+
             <!-- culture slide -->
             <div id="slide-3">
                 we have slides here too
             </div>
+
+
+
             <!-- staff testimonial -->
             <div id="slide-4">
                 we have slides here too
             </div>
+
+
+
             <!-- Job opening -->
             <div id="slide-5">
                 we have slides here too
             </div>
+
+
+
         </div>
         <script src="js/jquery.min.js"></script>
         <script>
