updating for checking changes

--- a/test_page/index.html
+++ b/test_page/index.html
@@ -14,39 +14,56 @@
     <body>
         <!-- welcome slide -->
         <div id="slide-1" class="media-cover-dark">
-
             <div class="row">
                 <div class="text-xs-center
-                col-xs-12 col-xs-offset-0
-                col-sm-10 col-sm-offset-1
-                col-md-8 col-md-offset-2
-                col-lg-8 col-lg-offset-2
-                col-xl-6 col-xl-offset-3" id="slide-1-heading">
-                <h1 class="display-3"> Work at Cozee</h1>
+                    col-xs-12 col-xs-offset-0
+                    col-sm-10 col-sm-offset-1
+                    col-md-8 col-md-offset-2
+                    col-lg-8 col-lg-offset-2
+                    col-xl-6 col-xl-offset-3" id="slide-1-heading">
+                    <h1 class="display-3"> Work at Cozee</h1>
                 </div>
             </div>
-
             <div class="row">
                 <div class="text-xs-center
-                col-xs-8 col-xs-offset-2
-                col-sm-8 col-sm-offset-2
-                col-md-8 col-md-offset-2
-                col-lg-8 col-lg-offset-2
-                col-xl-6 col-xl-offset-3" id="slide-1-msg">
+                    col-xs-8 col-xs-offset-2
+                    col-sm-8 col-sm-offset-2
+                    col-md-8 col-md-offset-2
+                    col-lg-8 col-lg-offset-2
+                    col-xl-6 col-xl-offset-3" id="slide-1-msg">
                     <h5>We're looking for talented people who care about solving hard problems and building technology that people love to use</h5>
                 </div>
             </div>
-
-            <br><br><br><br>
             <div id="slide-1-button" class="text-xs-center">
                 <a class="btn btn-secondary slide-1-button" href="#" role="button">Current opening postions</a>
             </div>
             <br><br><br><br>
         </div>
         <!-- mission slide -->
-        <div class="container">
-            <div id="slide-2">
+        <div id="slide-2">
+            <div class="row">
+                <div class="text-xs-center
+                    col-xs-6 col-xs-offset-3
+                    col-sm-6 col-sm-offset-3
+                    col-md-6 col-md-offset-3
+                    col-lg-6 col-lg-offset-3"
+                    id="slide-2-heading">
+                    <h1 class="display-5"> Cozee is ... </h1>
+                </div>
             </div>
+            <div class="row">
+                <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-xs-center" id="slide-2-msg">
+                    ... a technology company that enables on-demand delivery to empower local economies. We're building a company people love.  We help owner businesses grow and provide cozee homes to tenant.
+                    <br>
+                    <br>
+                    We're looking to expand the founding team with talented people who are excited about our mission to build out the world best cozee homes providers.
+                    <br>
+                    <br>
+                    Cozee is based in Bengalore, India.
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
             <!-- culture slide -->
             <div id="slide-3">
                 we have slides here too
