--- a/test_page/index.html
+++ b/test_page/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-6 col-lg-offset-3 text-xs-center" id="slide-2-msg">
+                <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-6 col-lg-offset-3 text-xs-justify text-sm-justify text-md-justify text-lg-center" id="slide-2-msg">
                     ... a technology company that enables on-demand delivery to empower local economies. We're building a company people love.  We help owner businesses grow and provide cozee homes to tenant.
                     <br>
                     <br>
