updating for checking changes

--- a/test_page/index.html
+++ b/test_page/index.html
@@ -8,6 +8,8 @@
         <title>Careers @ Cozee</title>
         <!--Offline version and live version Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
+        <!-- Stylesheet for awesome font -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous"> -->
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -63,11 +65,92 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
-            <!-- culture slide -->
-            <div id="slide-3">
-                we have slides here too
+        <!-- culture slide -->
+        <div id="slide-3">
+            <div class="row">
+                <div class="text-xs-center
+                    col-xs-8 col-xs-offset-2
+                    col-sm-8 col-sm-offset-2
+                    col-md-8 col-md-offset-2
+                    col-lg-6 col-lg-offset-3"
+                    id="slide-3-heading">
+                    <h1 class="display-5"> Our Culture </h1>
+                </div>
             </div>
+
+            <div id="slide-3-cards">
+            <div class="container">
+<div class="card-columns">
+
+    <div class="card slide-3-culture-card card-block card-inverse text-xs-left">
+    <blockquote class="card-blockquote">
+      <p> <i class="fa fa-circle"></i>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+      <footer>
+        <small>
+
+        </small>
+      </footer>
+    </blockquote>
+  </div>
+    <div class="card slide-3-culture-card card-block card-inverse text-xs-left">
+    <blockquote class="card-blockquote">
+      <p> <i class="fa fa-circle"></i>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+      <footer>
+        <small>
+
+        </small>
+      </footer>
+    </blockquote>
+  </div>
+
+      <div class="card slide-3-culture-card card-block card-inverse text-xs-left">
+    <blockquote class="card-blockquote">
+      <p> <i class="fa fa-circle"></i>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+      <footer>
+        <small>
+
+        </small>
+      </footer>
+    </blockquote>
+  </div>
+      <div class="card slide-3-culture-card card-block card-inverse text-xs-left">
+    <blockquote class="card-blockquote">
+      <p> <i class="fa fa-circle"></i>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+      <footer>
+        <small>
+
+        </small>
+      </footer>
+    </blockquote>
+  </div>
+      <div class="card slide-3-culture-card card-block card-inverse text-xs-left">
+    <blockquote class="card-blockquote">
+      <p> <i class="fa fa-circle"></i>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+      <footer>
+        <small>
+
+        </small>
+      </footer>
+    </blockquote>
+  </div>
+      <div class="card slide-3-culture-card card-block card-inverse text-xs-left">
+    <blockquote class="card-blockquote">
+      <p> <i class="fa fa-circle"></i>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+      <footer>
+        <small>
+
+        </small>
+      </footer>
+    </blockquote>
+  </div>
+
+</div>
+            </div>
+            </div>
+
+        </div>
+
+        <div class="container-fluid">
             <!-- staff testimonial -->
             <div id="slide-4">
                 we have slides here too
