--- a/test_page/index.html
+++ b/test_page/index.html
@@ -122,6 +122,33 @@
                             Some quick example text to build on the card title and make up the bulk of the card's content.
                         </div>
                     </div>
+                    <br>
+<div class="row">
+                        <!-- square -->
+                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 text-xs-right">
+                            <i class="fa fa-square"></i>
+                        </div>
+                        <!-- text -->
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </div>
+                        <!-- square -->
+                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 text-xs-right">
+                            <i class="fa fa-square"></i>
+                        </div>
+                        <!-- text -->
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </div>
+                        <!-- square -->
+                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 text-xs-right">
+                            <i class="fa fa-square"></i>
+                        </div>
+                        <!-- text -->
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="slide-3-image-slide">
