--- a/test_page/index.html
+++ b/test_page/index.html
@@ -85,68 +85,37 @@
                             <div class="card-block">
                                 <div class="row">
                                     <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                                        <i class="fa fa-square"></i>
+                                        <i class="fa fa-square" style="color:#FD4D00"></i>
                                     </div>
                                     <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-                                        <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <p>We are a product, engineering, and design-led organization.</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <!-- square -->
-                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 text-xs-right">
-                            <i class="fa fa-square"></i>
+                        <div class="card slide-3-culture-card card-block card-inverse text-xs-left">
+                            <div class="card-block">
+                                <div class="row">
+                                    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                                        <i class="fa fa-square"  style="color:#10C113"></i>
+                                    </div>
+                                    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                                        <p>Design is a critical part of our product. We constantly raise the bar on user experience.</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <!-- text -->
-                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                            Some quick example text to build on the card title and make up the bulk of the card's content.
-                        </div>
-                        <!-- square -->
-                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 text-xs-right">
-                            <i class="fa fa-square"></i>
-                        </div>
-                        <!-- text -->
-                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                            Some quick example text to build on the card title and make up the bulk of the card's content.
-                        </div>
-                        <!-- square -->
-                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 text-xs-right">
-                            <i class="fa fa-square"></i>
-                        </div>
-                        <!-- text -->
-                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                            Some quick example text to build on the card title and make up the bulk of the card's content.
-                        </div>
-                    </div>
-                    <br>
-<div class="row">
-                        <!-- square -->
-                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 text-xs-right">
-                            <i class="fa fa-square"></i>
-                        </div>
-                        <!-- text -->
-                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                            Some quick example text to build on the card title and make up the bulk of the card's content.
-                        </div>
-                        <!-- square -->
-                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 text-xs-right">
-                            <i class="fa fa-square"></i>
-                        </div>
-                        <!-- text -->
-                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                            Some quick example text to build on the card title and make up the bulk of the card's content.
-                        </div>
-                        <!-- square -->
-                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 text-xs-right">
-                            <i class="fa fa-square"></i>
-                        </div>
-                        <!-- text -->
-                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                            Some quick example text to build on the card title and make up the bulk of the card's content.
+                        <div class="card slide-3-culture-card card-block card-inverse text-xs-left">
+                            <div class="card-block">
+                                <div class="row">
+                                    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                                        <i class="fa fa-square" style="color:#FCAD13"></i>
+                                    </div>
+                                    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                                        <p>We always ship code the moment it is better than what is live on our site – no matter what.</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
