updating for checking changes

--- a/test_page/index.html
+++ b/test_page/index.html
@@ -120,17 +120,17 @@
             </div>
             <div id="slide-3-image-slide">
 
-            <div class="slide-class">
+<!--             <div class="slide-class">
                 <div class="image-cover">
-                    <img  src="../image/slide1.jpg" alt="slide 1">
+                    <img  src="image/slide1.jpg" alt="slide 1">
                 </div>
                 <div class="image-cover">
-                    <img  src="../image/slide4.jpg" alt="slide 1">
+                    <img  src="image/slide4.jpg" alt="slide 1">
                 </div>
                 <div class="image-cover">
-                    <img  src="../image/slide3.jpg" alt="slide 1">
+                    <img  src="image/slide3.jpg" alt="slide 1">
                 </div>
-            </div>
+                </div> -->
             </div>
             <br><br>
         </div>
@@ -178,9 +178,8 @@
                 slidesToShow: 1,
                 centerMode: true,
                 centerPadding: "50px",
-                focusOnSelect: true,
+                // focusOnSelect: true,
                 variableWidth: true,
-                responsive: "unslick"
             });
         });
 
