--- a/test_page/index.html
+++ b/test_page/index.html
@@ -18,7 +18,7 @@
         <!-- Custom Style Sheet for this page -->
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>
+    <body onload="showStaff(1);">
         <!------------------------- welcome slide ---------------------------->
         <div id="slide-1">
             <div class="row">
@@ -137,7 +137,37 @@
         <div class="container-fluid">
             <!------------------------- staff testimonial -------------------->
             <div id="slide-4">
-                we have slides here too
+
+            <div class="container">
+            <div class="row">
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                    <!-- thumbnail of staff -->
+                    <div class="row staff-thumbnail">
+                        <img id="staff1thumbnail" src="image/staff1.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(1);" alt="staff 1">
+                    </div>
+                    <div  class="row staff-thumbnail">
+                        <img  id="staff2thumbnail"  src="image/staff2.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(2);" alt="staff 1">
+                    </div>
+                    <div   class="row  staff-thumbnail">
+                        <img id="staff3thumbnail"  src="image/staff3.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(3);" alt="staff 1">
+                    </div>
+                </div>
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                <!-- description of that particular staff -->
+                <div class="row">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="position: relative; left: 0; top: 0;">
+                        <!-- Staff bigger image -->
+                        <img id="staff-large" visibility="visible" src="image/staff1_large.jpg" class="img-thumbnail img-responsive slide-4-staff-large" alt="">
+                    </div>
+                    <!-- Staff testimonial -->
+                    <div id="about-staff" class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+
+                    </div>
+                </div>
+                </div>
+            </div>
+            </div>
+
             </div>
             <!------------------------- Job opening -------------------------->
             <div id="slide-5">
@@ -183,6 +213,46 @@
             });
         });
 
+        function showStaff(staffID) {
+            var staff_large_photo = document.getElementById("staff-large");
+            var about_staff = document.getElementById("about-staff");
+            switch(staffID){
+                case 1:
+                    staff_large_photo.src = "image/staff1_large.jpg";
+                    about_staff.innerHTML = "<b>BACKEND TEAM</b><h1>Angela</h1><hr><b>What do you do at Cozee ?</b><br><p>I am part of the back end team and work on the network generation part of the application.</p><b>Where did you grow up?</b><br><p>I grew up in Bogota, Colombia. It's probably also one of my favorite cities, at 2600m above sea level, it has cool, San Francisco like weather all year round: One of the reasons I love both places.</p>"
+                    break;
+                case 2:
+                    staff_large_photo.src = "image/staff2_large.jpg";
+                    about_staff.innerHTML = "<b>OPERATION</b><h1>Michael</h1><hr><b>What do you do at Cozee ?</b><br><p>I manage and I am responsible for all People Operations here at Quid.</p><b>What's special about the people at Quid?</b><br><p>They're all independent go-getters with a common purpose.</p>"
+                    break;
+                case 3:
+                    staff_large_photo.src = "image/staff3_large.jpg";
+                    about_staff.innerHTML = "<b>COMMERCIAL TEAM</b><h1>Emily</h1><hr><b>What do you do at Cozee ?</b><br><p>I'm currently focused on growing the Quid healthcare team and I'm responsible for identifying the overlap between healthcare user needs and Quid capabilities. I love innovating in this space and constantly think about new data sets and features to add for our healthcare users. In addition, I lead many client services projects and continue to build strong relationships with our expanding client base.</p><b>What do you like best about your job?</b><br><p>I love helping users understand how Quid can map the evolution of human thought - from patient discussions to scientific research to start up ideas - and how that can lead to major business value.</p>"
+                    break;
+                default:
+                    staff_large_photo.src = "image/staff1_large.jpg";
+                    about_staff.innerHTML = "<b>BACKEND TEAM</b><h1>Angela</h1><hr><b>What do you do at Cozee ?</b><br><p>I am part of the back end team and work on the network generation part of the application.</p><b>Where did you grow up?</b><br><p>I grew up in Bogota, Colombia. It's probably also one of my favorite cities, at 2600m above sea level, it has cool, San Francisco like weather all year round: One of the reasons I love both places.</p>"
+                    break;
+            }
+            document.getElementById('staff1thumbnail').style.cssText = 'box-shadow: none;';
+            document.getElementById('staff2thumbnail').style.cssText = 'box-shadow: none;';
+            document.getElementById('staff3thumbnail').style.cssText = 'box-shadow: none;';
+            switch (staffID) {
+                case 1:
+                    document.getElementById('staff1thumbnail').style.cssText = 'box-shadow: 0px 0px 5px 1px #424242;';
+                    break;
+                case 2:
+                    document.getElementById('staff2thumbnail').style.cssText = 'box-shadow: 0px 0px 5px 1px #424242;';
+                    break;
+                case 3:
+                    document.getElementById('staff3thumbnail').style.cssText = 'box-shadow: 0px 0px 5px 1px #424242;';
+                    break;
+                default:
+                    document.getElementById('staff1thumbnail').style.cssText = 'box-shadow: 0px 0px 5px 1px #424242;';
+                    break;
+
+            }
+        }
         </script>
     </body>
 </html>
