--- a/test_page/index.html
+++ b/test_page/index.html
@@ -155,7 +155,7 @@
                 <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
                 <!-- description of that particular staff -->
                 <div class="row">
-                    <div class="col-xs-1 col-sm-6 col-md-6 col-lg-6" style="position: relative; left: 0; top: 0;">
+                    <div class="col-sm-6 col-md-6 col-lg-6" style="position: relative; left: 0; top: 0;">
                         <!-- Staff bigger image -->
                         <img id="staff-large" visibility="visible" src="image/staff1_large.jpg" class="img-thumbnail img-responsive slide-4-staff-large" alt="">
                     </div>
