--- a/test_page/index.html
+++ b/test_page/index.html
@@ -157,7 +157,7 @@
                 <div class="row">
                     <div class="col-xs-1 col-sm-6 col-md-6 col-lg-6" style="position: relative; left: 0; top: 0;">
                         <!-- Staff bigger image -->
-                        <img id="staff-large" visibility="visible" src="image/staff1_large.jpg" class="img-thumbnail img-responsive slide-4-staff-large" alt="">
+                        <img id="staff-large" visibility="visible" src="image/staff1_large.jpg" class="img-sm-thumbnail img-md-thumbnail img-lg-thumbnail img-xl-thumbnail img-responsive slide-4-staff-large" alt="">
                     </div>
 
                     <!-- Staff testimonial -->
