--- a/test_page/index.html
+++ b/test_page/index.html
@@ -179,7 +179,7 @@
             <!-- engineer -->
             <hr>
             <div class="row">
-                <div class="col-xs-3 col-xs-offset-1 col-sm-3 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
+                <div class="col-xs-3 col-sm-3 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
                     Engineering
                 </div>
                 <div class="col-xs-2 col-sm-3 col-md-3 col-lg-3">
@@ -200,7 +200,7 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-xs-3 col-xs-offset-1 col-sm-3 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
+                <div class="col-xs-3 col-sm-3 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
                     Management
                 </div>
                 <div class="col-xs-2 col-sm-3 col-md-3 col-lg-3">
@@ -216,7 +216,7 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-xs-3 col-xs-offset-1 col-sm-3 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
+                <div class="col-xs-3 col-sm-3 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
                     Others
                 </div>
                 <div class="col-xs-2 col-sm-3 col-md-3 col-lg-3">
