--- a/test_page/index.html
+++ b/test_page/index.html
@@ -179,10 +179,10 @@
             <!-- engineer -->
             <hr>
             <div class="row">
-                <div class="col-xs-3 col-sm-3 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
+                <div class="col-xs-3 col-sm-3 col-sm-offset-1 col-md-4 col-lg-4 slide-5-job-category">
                     Engineering
                 </div>
-                <div class="col-xs-2 col-sm-3 col-md-3 col-lg-3">
+                <div class="col-xs-2 col-sm-3 col-md-2 col-lg-2">
 
                 </div>
                 <div class="text-xs-left col-xs-7 col-sm-5 col-md-5 col-lg-5">
@@ -200,10 +200,10 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-xs-3 col-sm-3 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
+                <div class="col-xs-3 col-sm-3 col-sm-offset-1 col-md-4 col-lg-4 slide-5-job-category">
                     Management
                 </div>
-                <div class="col-xs-2 col-sm-3 col-md-3 col-lg-3">
+                <div class="col-xs-2 col-sm-3 col-md-2 col-lg-2">
 
                 </div>
                 <div class="text-xs-left col-xs-7 col-sm-5 col-md-5 col-lg-5">
@@ -216,10 +216,10 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-xs-3 col-sm-3 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
+                <div class="col-xs-3 col-sm-3 col-sm-offset-1 col-md-4 col-lg-4 slide-5-job-category">
                     Others
                 </div>
-                <div class="col-xs-2 col-sm-3 col-md-3 col-lg-3">
+                <div class="col-xs-2 col-sm-3 col-md-2 col-lg-2">
 
                 </div>
                 <div class="text-xs-left col-xs-7 col-sm-5 col-md-5 col-lg-5">
